# OpenGL_Test

./: CMakeLists.txt  Makefile.linux32  Makefile.linux64  Makefile.osx  Makefile.win32  OpenGL_Test.vcxproj  gl_utils.cpp  main.cpp  testDaniel.cpp  ybrr.sif
Debug/: vc120.idb
Debug/OpenGL_Test.tlog/: CL.read.1.tlog  CL.write.1.tlog  OpenGL_Test.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
